Replace use of reflection with MemorySegmentAccessInput